# dtlvnative

./: .cirrus.yml  .gitignore  .gitmodules  CHANGELOG.md  README.md  appveyor.yml  release.clj
.github/workflows/: build.yml
aarch64-linux-gnu/: project.clj
doc/: vector.md
freebsd-x86_64/: project.clj
linux-amd64/: project.clj
linux-arm64/: project.clj
linux-x86_64/: project.clj
macos-amd64/: project.clj
macos-latest-aarch64/: project.clj
macos-latest-aarch64-shared/: project.clj
macos-latest-aarch64-shared/resources/dtlvnative/macos-latest-amd64/: dtlv.h
macos-latest-amd64/: project.clj
macos-latest-amd64-shared/: project.clj
macosx-arm64/: project.clj
macosx-x86_64/: project.clj
script/: build  build-freebsd  build-jar  build-linux-shared  build-macos  build-macos-aarch64-shared  build-macos-shared  build-musl  build-zig  build.bat  install-leiningen  llama-embed-only-patch.sh  setup-musl-aarch64  setup-must-aarch64  test-embed-default  test-llama-summarization
script/patches/: llama-embed-only.patch
src/: CMakeLists.txt  Makefile  dtlv.c  dtlv.h  dtlv_bytes.h  dtlv_crc32c.c  dtlv_crc32c.h  dtlv_embed.cpp  dtlv_embed.h  dtlv_usearch.c  dtlv_usearch.h  dtlv_usearch_jni_bridge.cpp  dtlv_usearch_jni_bridge.h  dtlv_usearch_wal.c  dtlv_usearch_wal.h
src/java/datalevin/dtlvnative/: DTLV.java  DTLVConfig.java  DTLVEmbed.java  DTLVEmbedConfig.java  EmbedTest.java  Test.java
src/java/dtlvnative/: DTLV.java  DTLVConfig.java  LMDB.java  LMDBConfig.java  Test.java
src/java/org/bytedeco/javacpp/properties/: windows-x86_64.properties
src/tests/: dtlv_usearch_checkpoint_test.c
src/win32/: unistd.h
ubuntu-latest-aarch64/: project.clj
ubuntu-latest-aarch64-shared/: project.clj  project.clj~
ubuntu-latest-amd64/: project.clj
ubuntu-latest-amd64-shared/: project.clj
windows-amd64/: project.clj
windows-amd64-shared/: project.clj
windows-x86_64/: project.clj
x86_64-windows-gnu/: project.clj
